--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "spring-cloud-config-server"]
 	path = spring-cloud-config-server
 	url = https://github.com/new-developer-world/spring-cloud-config-server.git
+[submodule "currency-conversion-service"]
+	path = currency-conversion-service
+	url = https://github.com/new-developer-world/currency-conversion-service.git
